# OpenKinTest

./: .gitignore  .gitmodules  181003_v5_KNN.m  LICENSE.txt  LSTM_matlab_huy.m  README.md  bash-all-executable.sh  constant.py  execute.sh  led-linuxgpio.sh  led-linuxpwm.sh  led-pin.py  master-to-minnowboard.patch  measurement.sh  my_measurement.sh  onnxClass.py  parse_data.py  requirement.txt  rospack-list-executables.sh  short_measurement.sh  shutdown_flip.py  start_script.sh  testScan.py  utils.py
1_Neil_data_files/: Neil's_data_parse_functions.ipynb  Neil_data_correlation_plot.ipynb  README.md
1_measure_files/: Automatic_subj_training-test_HR.ipynb  Automatic_subj_training.ipynb  README.md  Verify_Matlab_input.ipynb  Verify_Matlab_input_step_segmented.ipynb  cell_array_parser_vn200.m  features_OK.m  input_features.m  reconfig.sh  run.m  trainingPartitions.m  velSeg.m
1_measure_files/HR_step_segmented/: README.md  cell_array_parser_vn200.m  input_features.m  linearInter.m  run.m  velSeg.m
3d/STL/: blockbase2.STL  (+28 more)
LatestSource/: README.md  led-linuxgpio.sh  listener.py  measurement.sh  vn200_node.cpp
Neil-file/: README.md
Pi-zero2-rebuild/: README.md
VO2-NN/: Best__model_bidir_dens16_epoch1000_O1.h5  Best__model_bidir_dens16_epoch1000_O1.ipynb  LSTM_predictVO2_5seqVel_v1.ipynb  Model1-Trained2-Pred2.ipynb  Model1-Trained2-ReTrani1-RePred1.ipynb  ModelTrained-12.h5  ModelTrained-121.h5  README.md  Same-Pavel-Matlab-config-best_loss.ipynb  Same-Pavel-Matlab-config.ipynb  ShortArr_adam-input_3D_enhaced_from_2D.ipynb  ShortArr_adam-input_3D_lr-0.2.ipynb  ShortArr_adam-input_3D_lr-0.2_Dense_16.ipynb  ShortArr_adam-input_3D_lr-0.2_Dense_16_epoch-300.ipynb  inputFeatures.mat
batch/: absolute-vo2.bat
buzz_version/: README.md  buzz-linuxgpio.sh  listener.py  measurement.sh  vn200_node.cpp
doc/: README.md
hidden-files/: README.md  Xauthority (copy)  bash_history (copy)  bashrc (copy)  gitconfig (copy)  ledlog (copy)swp  measurement_small.sh  nano_history (copy)  profile (copy)  python_history (copy)  viminfo (copy)  xsession-errors (copy)  xsession-errors (copy)old
inputFeatures/: README.md  inputFeatures10_sorted.mat  inputFeatures11.mat  inputFeatures11_sorted.mat  inputFeatures12_sorted.mat  inputFeatures13_sorted.mat  inputFeatures14_sorted.mat  inputFeatures15_sorted.mat  inputFeatures9.mat  inputFeatures9_sorted.mat
linux-shutdown/: Makefile  switch.cpp
m5stickC/: README.md  imu-test.ino
matlab/: cell_array_parser.m  cell_array_parser_vn200.m  circles2.m  comet_speed.m  parse_spoondata.m  pointplot.m  spoon2uwb2.m  uwb_filter.m
nodes/: mtdevice.py  mtnode.py  mtnode_new.py
nodes/imu_sequenced/: CMakeLists.txt  package.xml
nodes/imu_sequenced/msg/: ImuSequenced.msg
nodes/mtw_driver/: CMakeLists.txt  package.xml
nodes/mtw_driver/src/: Makefile  example_mt_w_cpp.cpp  mtw_node.cpp
nodes/pozyx/: CMakeLists.txt  package.xml
nodes/pozyx/include/: pozyx-arduino-to-linux.patch
nodes/pozyx/include/Pozyx-custom-library/: Pozyx.h  Pozyx_core.cpp  Pozyx_lib.cpp  helpers.cpp  helpers.hh
nodes/pozyx/include/Pozyx-custom-library/examples/chat_room/: Makefile  chat_room.cpp
nodes/pozyx/include/Pozyx-custom-library/examples/orientation_3D/: Makefile  orientation_3D  orientation_3D.cpp
nodes/pozyx/include/Pozyx-custom-library/examples/ready_to_range/: Makefile  ready_to_range.cpp
nodes/pozyx/include/RasPiArduino/cores/piduino/: Console.cpp  idemonitor.c
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/arduino-mk/: Arduino.mk
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/7segment/: 7segment.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/BaconDemo/: BaconDemo.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/Display/: Display.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/InteractivePWM/: InteractivePWM.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/PWM/: PWM.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/SPI/: SPI.ino
nodes/pozyx/include/Userspace-Arduino/arduino-makefile/examples/Stepper/: Stepper.ino
nodes/pozyx/include/Userspace-Arduino/libarduino/: boards.txt
nodes/pozyx/include/Userspace-Arduino/libarduino/cores/virtual/: Arduino.h  HardwareSerial.cpp  Print.cpp  i2c.c  linux-virtual.h  main.cpp  sysfs.c  sysfs.h  virtual_main.h  wiring.c  wiring_digital.c  wiring_shift.c
nodes/pozyx/include/Userspace-Arduino/libarduino/libraries/Wire/: Wire.cpp
nodes/pozyx/include/Userspace-Arduino/overlay/: BB-BONE-BACONE-00A0.dtbo  BB-BONE-BACONE-00A0.dts  BB-BONE-BACONE2-00A0.dts  BB-SPI0-01-00A0.dtbo  BB-SPI0-01-00A0.dts
nodes/pozyx/include/Userspace-Arduino/utility/: send_exec.txt
nodes/pozyx/src/: Makefile  Makefile2  pozyx.cpp  test  test.cpp  test2.cpp
old-doc-archive/: README.md
optimize_mem/: README.md  clear_cache.sh  short_measurement.sh
overlay/: BB-BONE-BACONE1-00A0.dtbo
paperSource/: Automatic_subj_9_training-only4inputs_v1.1-sliced-noVal-seed11.ipynb  Automatic_subj_9_training-onlyVel_v1.1-sliced-noVal-seed1.ipynb  BlandAtman_script-2-noHR.ipynb  BlandAtman_script-2-oHR.ipynb  BlandAtman_script-2-oVel.ipynb  BlandAtman_script-2-wHR.ipynb  README.md  onlyVel_Subj-9-950pochs-order-100-LSTM_u.h5
pavel-code/: BlandAltman.m  ManyToOneLSTM.m  README.md  VanillaLSTM.m  calc_RMSE.m  evaluate.m  input_features.m  plot_smoothed_vs_raw_oxygen.m  velSeg.m
utility/: send_exec.sh  send_only.sh
(+287 files in other folders)
