<package>
  <name>imu_sequenced</name>
  <version>0.0.1</version>
  <description>
  This package provides Imu message with a manual sequence number.
  </description>
  <maintainer email="heikki.virekunnas@tut.fi">Heikki Virekunnas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
