<package>
  <name>mtw_node</name>
  <version>0.0.0</version>
  <description>
  This package provides data from XSens MTw-unit using MT SDK.
  </description>
  <maintainer email="heikki.virekunnas@tut.fi">Heikki Virekunnas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>imu_sequenced</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>imu_sequenced</run_depend>
</package>
