<package>
  <name>pozyx</name>
  <version>0.0.1</version>
  <description>
  This package provides data from Pozyx-unit.
  </description>
  <maintainer email="heikki.virekunnas@tut.fi">Heikki Virekunnas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>imu_sequenced</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>imu_sequenced</run_depend>
</package>
